# Modulated-UART

./: .gitignore  CMakeLists.txt  README.md  main.c  toolchain.cmake
Core/Inc/: main.h  modulated_uart.h  sendByte.h
Core/Src/: main.c  modulated_uart.c  sendByte.c  stm32f4xx_it.c
Inc/: SendByte.h  gpio.h  tims.h
src/: SendByte.c  gpio.c  main.c  tims.c
